# carlogger

./: .gitignore  README.md  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: actions.yml
dev/: add_arg_test  add_arg_test.sh  all_test.sh  delete_arg_test.sh  export_arg_test.sh  import_arg_test.sh  pre-commit  read_arg_test.sh  teardown_tests.sh  update_arg_test.sh
save/collections/: Engine  Engine.json
src/carlogger/: __main__.py  arg_executor.py  arg_parser.py  argparser.py  car.py  car_component.py  car_info.py  component_collection.py  const.py  directory_manager.py  entry_category.py  entryfilter.py  filedata_manager.py  interfaces.py  log_entry.py  printer.py  rename_agent.py  session.py  util.py
src/carlogger/cli/: arg_executor.py  arg_parser.py  subparser.py
src/carlogger/gui/: c_carlist.py  c_itemlist.py  const_gui.py  root_window.py  w_addcar.py  w_addcollection.py  w_addcomponent.py  w_addentry.py  w_carframe.py  w_carlist.py  w_collectionlist.py  w_componentlist.py  w_deletion_confirmation.py  w_editcar.py  w_editcollection.py  w_editcomponent.py  w_editentry.py  w_frame.py  w_genericlist.py  w_homepage.py  w_item_infobox.py  w_itemlist.py  w_itempage.py  w_navigation.py  w_searchbar.py
tests/: add_arg_test  conftest.py  delete_arg_test  export_arg_test  import_arg_test  read_arg_test  test_argexecutor.py  test_argparser.py  test_car.py  test_car_component.py  test_component_collection.py  test_directory_manager.py  test_entryfilter.py  test_filedata_manager.py  test_itemfilter.py  test_itemsorter.py  test_session.py  update_arg_test
(+10 files in other folders)
