[metadata]
name = CarLogger
description = Track any work you perform on your car, keep a maintenance log, list of parts and write notes.
author = FancySnacks
version = 1.5.0
license = MIT
license_file = LICENSE
readme = README
platforms = unix, linux, osx, cygiwn, win32
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    carlogger
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    carlogger = carlogger.__main__:main

[build-system]
requires = ["setuptools~=69.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.3.1
    pytest-cov>=4.0.0

[coverage:run]
source = carlogger
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=carlogger
    --cov-report=term-missing